force-app/main/default/objects/Flight__c/fields/Arrival_airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival)</relationshipLabel>
    <relationshipName>Flights1</relationshipName>
    <type>Lookup</type>
</CustomField>