force-app/main/default/objects/Flight__c/fields/Flight_distance__c.field-meta.xml
<CustomField>
    <fullName>Flight_distance__c</fullName>
    <label>Flight distance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>