force-app/main/default/objects/Flight__c/listViews/Nueva_lista.listView-meta.xml
<ListView>
    <fullName>Nueva_lista</fullName>
    <columns>NAME</columns>
    <columns>Departure_airport__c</columns>
    <columns>Arrival_airport__c</columns>
    <filterScope>Mine</filterScope>
    <label>Nueva lista</label>
</ListView>